--- a/manifest.json
+++ b/manifest.json
@@ -21,5 +21,9 @@
   "background": {
     "service_worker": "service-worker.js"
   },
+  "action": {
+    "default_popup": "popup/popup.html",
+    "default_icon": "images/icon-48.png"
+  },
   "content_security_policy": "script-src 'self' 'unsafe-eval'"
 }
